# battleships

./: CMakeLists.txt  main.cpp
boost_tests/: CMakeLists.txt
boost_tests/battlefields_tests/: std_battlefield_tests.cpp
boost_tests/player_tests/: ext_player_tests.cpp  std_player_tests.cpp
boost_tests/result_manager_tests/: result_manager_tests.cpp
boost_tests/ship_tests/: ext_ship_mine_tests.cpp  ext_ship_minesweeper_tests.cpp  std_ship_tests.cpp
boost_tests/utils_tests/: coordinate_2d_test.cpp  coordinate_2d_tests.cpp  duty_tests.cpp  non_inclined_segment_tests.cpp  segment_tests.cpp
src/: CMakeLists.txt  battle_field.cpp  battle_field.h  config.h  duty.h  ext_game_config.h  game.h  game_state.h  main.cpp  player.cpp  player.h  ship.cpp  ship.h  std_game_config.h
src/battlefields/: battlefield_base.cpp  battlefield_base.h  std_battlefield.cpp  std_battlefield.h  std_battlefield_base.cpp  std_battlefield_base.h
src/game/: ext_game.cpp  ext_game.h  game.cpp  game.h  std_game.cpp  std_game.h  std_game_base.cpp  std_game_base.h
src/game/duty/: duty.h
src/game/game_state/: action_state_base.cpp  action_state_base.h  ext_game_state.cpp  ext_game_state.h  game_state_base.cpp  game_state_base.h  menu_game_state.cpp  menu_game_state.h  std_game_state.cpp  std_game_state.h  web_game_state.cpp  web_game_state.h
src/game/player_manager/: player_manager.h  player_manager_base.cpp  player_manager_base.h  std_player_manager.cpp  std_player_manager.h  user.cpp  user.h
src/game/result_manager/: game_result.h  result_manager.cpp  result_manager.h
src/input/: concurrent_input_handler_base.cpp  concurrent_input_handler_base.h  console_input_handler.cpp  console_input_handler.h  game_event.h  input_handler_base.cpp  input_handler_base.h
src/input/AI/: std_ai.cpp  std_ai.h
src/input/console_input/: concurrent_console_input_handler.cpp  concurrent_console_input_handler.h  std_console_input_handler.cpp  std_console_input_handler.h
src/input/web_input/: web_input_handler.cpp  web_input_handler.h  web_wrapper.cpp  web_wrapper.h
src/players/: ext_player.cpp  ext_player.h  ext_player_base.cpp  ext_player_base.h  player_base.cpp  player_base.h  std_player.cpp  std_player.h  std_player_base.cpp  std_player_base.h
src/players/ext_player/: ext_player.cpp  ext_player.h  ext_player_base.cpp  ext_player_base.h
src/players/std_player/: std_player.cpp  std_player.h
src/ships/: battle_ship.cpp  battle_ship.h  ext_ship_base.cpp  ext_ship_base.h  ext_ship_mine.cpp  ext_ship_mine.h  ext_ship_minesweeper.cpp  ext_ship_minesweeper.h  ship_base.cpp  ship_base.h  std_ship.cpp  std_ship.h  std_ship_base.cpp  std_ship_base.h  surprise_ship.cpp  surprise_ship.h  typed_ship_base.cpp  typed_ship_base.h  unsurprising_ship.cpp  unsurprising_ship.h
src/ships/ext_ship/: ext_ship_base.h  ext_ship_mine.cpp  ext_ship_mine.h  ext_ship_minesweeper.cpp  ext_ship_minesweeper.h
src/ships/std_ship/: std_ship.cpp  std_ship.h
src/ui/: console_user_interface.cpp  console_user_interface.h  user_interface_base.cpp  user_interface_base.h
src/ui/renderable/: renderable_base.cpp  renderable_base.h  renderable_menu.cpp  renderable_menu.h  renderable_message.cpp  renderable_message.h  renderable_results_board.cpp  renderable_results_board.h  renderable_ship.cpp  renderable_ship.h  renderable_table.cpp  renderable_table.h  renderable_turn_indicator.cpp  renderable_turn_indicator.h
src/utils/: coordinate_2d.h  duty.h  non_inclined_segment.h  segment.h
src/utils/database/: database.cpp  database.h
src/utils/math/: coordinate_2d.h  non_inclined_segment.h  segment.h
src/web/message/: db_message.h  input_message.h  std_message.h  web_message.h
